# django_api

./: README.md  db.sqlite3  pyproject.toml  registros.txt  requirements.txt
mysite/: settings.py  urls.py
render/: urls.py  utils.py  views.py
render/templates/render/: index.html
