[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["obed vega <vega.obed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.4"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
